--- a/requirements.txt
+++ b/requirements.txt
@@ -1,179 +1,18 @@
-alphashape==1.3.1
-altgraph @ file:///AppleInternal/Library/BuildRoots/4~CAP1ugDqYZ2ZVF_54thwSWnK-8L4LO5_Zcx-VcI/Library/Caches/com.apple.xbs/Sources/python3/altgraph-0.17.2-py2.py3-none-any.whl
-anyio==4.10.0
-appnope==0.1.4
-arabic-reshaper==3.0.0
-argon2-cffi==25.1.0
-argon2-cffi-bindings==25.1.0
-arrow==1.3.0
-asgiref==3.8.1
-asn1crypto==1.5.1
-asttokens==3.0.0
-async-lru==2.0.5
-attrs==25.3.0
-babel==2.17.0
-beautifulsoup4==4.13.5
-bleach==6.2.0
-boto3==1.37.33
-botocore==1.37.38
-certifi==2025.10.5
-cffi==1.17.1
-chardet==5.2.0
-charset-normalizer==3.4.2
-click==8.1.8
-click-log==0.4.0
-colorama==0.4.6
-comm==0.2.3
-contourpy==1.3.0
-cryptography==44.0.3
-cssselect2==0.8.0
+Django==4.2.16
+gunicorn==22.0.0
+whitenoise==6.7.0
+matplotlib==3.8.4
+numpy==1.26.4
+pandas==2.2.2
+# 少量基础依赖，如:
+contourpy==1.2.1
 cycler==0.12.1
-debugpy==1.8.16
-decorator==5.2.1
-defusedxml==0.7.1
-Django==4.2.24
-django-cors-headers==4.9.0
-djangorestframework==3.16.0
-et_xmlfile==2.0.0
-exceptiongroup==1.3.0
-executing==2.2.1
-fastjsonschema==2.21.2
-filelock==3.19.1
-fonttools==4.60.0
-fqdn==1.5.1
-fsspec==2025.9.0
-future @ file:///AppleInternal/Library/BuildRoots/4~CAP1ugDqYZ2ZVF_54thwSWnK-8L4LO5_Zcx-VcI/Library/Caches/com.apple.xbs/Sources/python3/future-0.18.2-py3-none-any.whl
-gitdb==4.0.12
-GitPython==3.1.45
-gunicorn==23.0.0
-h11==0.16.0
-html5lib==1.1
-httpcore==1.0.9
-httpx==0.28.1
-idna==3.10
-importlib_metadata==8.7.0
-importlib_resources==6.5.2
-ipykernel==6.30.1
-ipython==8.18.1
-isoduration==20.11.0
-jedi==0.19.2
-Jinja2==3.1.6
-jmespath==1.0.1
-joblib==1.5.2
-json5==0.12.1
-jsonpointer==3.0.0
-jsonschema==4.25.1
-jsonschema-specifications==2025.9.1
-jupyter-events==0.12.0
-jupyter-lsp==2.3.0
-jupyter_client==8.6.3
-jupyter_core==5.8.1
-jupyter_server==2.17.0
-jupyter_server_terminals==0.5.3
-jupyterlab==4.4.7
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.27.3
-kiwisolver==1.4.7
-lark==1.2.2
-lxml==5.4.0
-macholib @ file:///AppleInternal/Library/BuildRoots/4~CAP1ugDqYZ2ZVF_54thwSWnK-8L4LO5_Zcx-VcI/Library/Caches/com.apple.xbs/Sources/python3/macholib-1.15.2-py2.py3-none-any.whl
-mando==0.7.1
-MarkupSafe==3.0.2
-matplotlib==3.9.4
-matplotlib-inline==0.1.7
-mistune==3.1.4
-mpmath==1.3.0
-nbclient==0.10.2
-nbconvert==7.16.6
-nbformat==5.10.4
-nest-asyncio==1.6.0
-networkx==3.2.1
-notebook==7.4.5
-notebook_shim==0.2.4
-numpy==2.0.2
-openpyxl==3.1.5
-oscrypto==1.3.0
-outcome==1.3.0.post0
-overrides==7.7.0
-packaging==25.0
-pandas==2.3.2
-pandocfilters==1.5.1
-parso==0.8.5
-pexpect==4.9.0
-pillow==11.2.1
-platformdirs==4.4.0
-prometheus_client==0.22.1
-prompt_toolkit==3.0.52
-psutil==7.0.0
-ptyprocess==0.7.0
-pure_eval==0.2.3
-pwlf==2.5.2
-pycparser==2.22
-Pygments==2.19.2
-pyHanko==0.26.0
-pyhanko-certvalidator==0.26.8
-PyMySQL==1.1.1
-pyparsing==3.2.4
-pypdf==5.4.0
-pypinyin==0.54.0
-PySocks==1.7.1
-python-bidi==0.6.6
+fonttools==4.53.1
+kiwisolver==1.4.5
+packaging==24.1
+Pillow==10.3.0
+pyparsing==3.1.2
 python-dateutil==2.9.0.post0
-python-dotenv==1.1.0
-python-json-logger==3.3.0
-pytz==2025.2
-PyYAML==6.0.2
-pyzmq==27.1.0
-qrcode==8.2
-radon==6.0.1
-referencing==0.36.2
-reportlab==4.4.0
-requests==2.32.3
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rfc3987-syntax==1.1.0
-rpds-py==0.27.1
-rtree==1.4.1
-s3transfer==0.11.4
-scikit-learn==1.6.1
-scipy==1.13.1
-selenium==4.36.0
-Send2Trash==1.8.3
-shapely==2.0.7
-six==1.17.0
-smmap==5.0.2
-sniffio==1.3.1
-sortedcontainers==2.4.0
-soupsieve==2.8
-SQLAlchemy==2.0.44
-sqlparse==0.5.3
-stack-data==0.6.3
-stripe==12.1.0
-svglib==1.5.1
-sympy==1.14.0
-terminado==0.18.1
-threadpoolctl==3.6.0
-tinycss2==1.4.0
-tomli==2.2.1
-torch==2.8.0
-torchvision==0.23.0
-tornado==6.5.2
-traitlets==5.14.3
-trimesh==4.8.1
-trio==0.31.0
-trio-websocket==0.12.2
-types-python-dateutil==2.9.0.20250822
-typing_extensions==4.15.0
-tzdata==2025.2
-tzlocal==5.3.1
-uri-template==1.3.0
-uritools==5.0.0
-urllib3==2.5.0
-wcwidth==0.2.13
-webcolors==24.11.1
-webencodings==0.5.1
-websocket-client==1.8.0
-whitenoise==6.11.0
-wsproto==1.2.0
-xhtml2pdf==0.2.17
-zipp==3.23.0
+pytz==2024.1
+six==1.16.0
+tzdata==2024.1
